syntax = "proto3";
package Cryptos;

option go_package = "../cryptos_pb";

service CryptosService {
    rpc EncryptData (CryptoRequest) returns (CryptoResponse){}
    rpc DecryptData (CryptoRequest) returns (CryptoResponse){}
}

message CryptoRequest {
    bytes data = 1;
    int32 type = 2; 
}

message CryptoResponse {
    bytes data = 1;
    int32 type = 2;
}
